# PythonDevContainer

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: .gitignore  test.ipynb
src/: main.py
