[project]
name = "yolo-ml-dev"
version = "0.1.0"
description = "YOLO-based machine learning development environment"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = false

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]
ignore = []
fix = true
preview = true
exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.pyright]
reportMissingTypeStubs = "none"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
